--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -8,14 +8,14 @@
         "ecmaVersion": 2015
     },
     "rules": {
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
+        // "indent": [
+        //     "error",
+        //     2
+        // ],
+        // "linebreak-style": [
+        //     "error",
+        //     "unix"
+        // ],
         "quotes": [
             "error",
             "single",
