--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,15 @@
 
 # testing
 /coverage
+/cypress/videos
 
 # production
 /build
 
 # misc
 .DS_Store
+.eslintcache
+.env
 .env.local
 .env.development.local
 .env.test.local
