--- a/package.json
+++ b/package.json
@@ -3,23 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "^4.0.1",
+    "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@testing-library/cypress": "^7.0.3",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "cross-env": "^7.0.3",
+    "cypress": "^6.2.1",
+    "eslint-plugin-cypress": "^2.11.2",
+    "msw": "^0.24.4",
+    "start-server-and-test": "^1.11.7",
+    "stylelint": "^13.8.0",
+    "stylelint-config-standard": "^20.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env PORT=3001 react-scripts start",
     "build": "react-scripts build",
+    "update": "npx msw init public",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test:unit": "npm run test -- --watchAll=false",
+    "test:integration": "start-server-and-test start http://localhost:3001 cy:run",
+    "test:ci": "cross-env CI=true npm run test:unit && npm run test:integration",
+    "eject": "react-scripts eject",
+    "lint:js": "eslint ./src/**/*.js",
+    "lint:css": "stylelint ./src/**/*.css",
+    "lint": "npm run lint:js && npm run lint:css"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -32,8 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "msw": "^0.25.0"
   }
 }
